sidebar is working fine

--- a/packages/Webkul/Velocity/src/Resources/assets/sass/_variables.scss
+++ b/packages/Webkul/Velocity/src/Resources/assets/sass/_variables.scss
@@ -31,3 +31,8 @@ $material-icons-font-path: "../material-icons/iconfont/" !default;
 $border-normal: 1px solid $border-dark;
 
 $font-family-pro: 'Source Sans Pro', sans-serif;
+
+$c-theme-background: #131921;
+$c-heading-size : 20px;
+
+$c-grey-clr: #707070;
