--- a/packages/Webkul/Velocity/src/Resources/assets/sass/app.scss
+++ b/packages/Webkul/Velocity/src/Resources/assets/sass/app.scss
@@ -10,7 +10,7 @@
 @import "components/product-view";
 @import "components/media";
 @import "components/rtl";
-
+@import "custom/index";
 @import "static/material-icons";
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
