--- a/packages/Webkul/Velocity/src/Resources/assets/sass/custom/sidebar.scss
+++ b/packages/Webkul/Velocity/src/Resources/assets/sass/custom/sidebar.scss
@@ -1,70 +1,108 @@
-.c-sidebar{
-    background: $c-theme-background;
+.sidebar-backdrop {
     position: fixed;
-    top:0;
+    top: 0;
+    bottom: 0;
     left: 0;
-    height: 100%;
-    width: 600px;
+    right: 0;
+    background-color: transparent;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.3s;
+    &.show {
+        background-color: rgba(0,0,0,0.4);
+        visibility: visible;
+        opacity: 1;
+        z-index: 10;
+    }
+}
+.c-sidebar{
     z-index: 999;
-    flex-direction: column;
-    padding: 0px;
-    display: none;
-    transition: 1s;
-    .cross-icon{
-        position: absolute;
-        right: 0;
-        top: 0;
-        width: 20px;
-        margin: 15px 15px 0px 0px ;
-        cursor: pointer;
-    }
-    .profile {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        margin: 15px 0px 15px 40px;
-        .profile-icon{
-            width: 56px;
-        }
-        .profile-title {
-            font-size: $c-heading-size;
-            margin: 0px 0px 0px 10px;
-        }
-    }
-    .category-list{
-        flex:1;
-        background: $white-color;
-        padding: 10px 0px 0px 0px;
+    position: fixed;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    left: -100%;
+    //background: rgba(0,0,0,0.3);
+    overflow: hidden;
+    display: flex;
+    transition: 0.5s ease all;
+    .c-sidebar-content {
+        position: relative;
+        background: $c-theme-background;
         height: 100%;
-        h2{
-            font-size: $c-heading-size;
-            color: $c-grey-clr;
-            margin: 10px 0px 10px 30px;
-            font-weight: bold ;
+        width: 600px;
+        display: flex;
+        flex-direction: column;
+        padding: 0px;
+        left: 0;
+        transition: 0.5s ease all;
+        .cross-icon {
+            position: absolute;
+            right: 0;
+            top: 0;
+            width: 20px;
+            margin: 15px 15px 0px 0px;
+            cursor: pointer;
         }
-        .category-content{
+        .profile {
             display: flex;
             flex-direction: row;
-            flex:1;
-            justify-content: space-between;
             align-items: center;
-            padding:5px 40px 5px 50px;
-            .category {
-                .category-title{
-                    color: $black-color;
-                    font-size: $c-heading-size;
+            margin: 15px 0px 15px 40px;
+
+            .profile-icon {
+                width: 56px;
+            }
+
+            .profile-title {
+                font-size: $c-heading-size;
+                margin: 0px 0px 0px 10px;
+            }
+        }
+        .category-list {
+            flex: 1;
+            background: $white-color;
+            padding: 10px 0px 0px 0px;
+            height: 100%;
+
+            h2 {
+                font-size: $c-heading-size;
+                color: $c-grey-clr;
+                margin: 10px 0px 10px 30px;
+                font-weight: bold;
+            }
+
+            .category-content {
+                display: flex;
+                flex-direction: row;
+                flex: 1;
+                justify-content: space-between;
+                align-items: center;
+                padding: 5px 40px 5px 50px;
+
+                .category {
+                    .category-title {
+                        color: $black-color;
+                        font-size: $c-heading-size;
+                    }
                 }
-            }
-            .arrow-icon{
-                width: 12px;
-                height: 20px;
-            }
-            &:hover{
-                background: #E7E7E8;
+
+                .arrow-icon {
+                    width: 12px;
+                    height: 20px;
+                }
+
+                &:hover {
+                    background: #E7E7E8;
+                }
             }
         }
     }
-    .show{
-        display: block;
+    &.show {
+        //display: flex;
+        left: 0;
+        .c-sidebar-content {
+            //left: 0;
+        }
     }
 }
